[package]
name = "repeating_future"
version = "0.1.0"
edition = "2021"
description = "[RepeatingFuture] is a [Future] that can call an async function of an object over and over again."
authors = ["Dirk Faust <dirk@faustbande.de>"]
license = "MIT"
repository = "https://github.com/Dirk007/repeating_future"
keywords = ["future", "async", "stream"]

[[example]]
name = "manual"

[dependencies]
futures = "0.3.21"
futures-lite = "1.12.0"
pin-utils = "0.1.0"

tokio = { version = "1.17.0", features = ["rt-multi-thread"], optional = true }
anyhow = { version ="1.0.53", optional = true}
pin-project = { version ="1.0.10", optional = true}

[dev-dependencies]
rumqttc = "0.11.0"
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
anyhow = "1.0.53"
log = "0.4.14"
env_logger = "0.9.0"
pin-project = "1.0.10"
futures = "0.3.21"
futures-lite = "1.12.0"
pin-utils = "0.1.0"


[features]
default = ["streams"]
streams = ["tokio", "anyhow",  "pin-project"]