[package]
name = "streaming_rumqttc_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "streaming_rumqttc_example"
path = "src/main.rs"

[dependencies]
repeating_future = { path = "../.." }

rumqttc = "0.10.0"
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
anyhow = "1.0.53"
log = "0.4.14"
env_logger = "0.9.0"
pin-project = "1.0.10"
futures = "0.3.21"
futures-lite = "1.12.0"
pin-utils = "0.1.0"
